--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="Features.html">Features</a>
+              <a class="nav-link" href="bosan.html">page bosan</a>
               <a class="nav-link" href="#">Pricing</a>
           
             </div>
