--- a/bosan.html
+++ b/bosan.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>HTML</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/120px-HTML5_logo_and_wordmark.svg.png" alt="Gambar logo HTML">
     <p><b>HyperText Markup Language (HTML)</b> adalah <a href="https://id.wikipedia.org/wiki/Bahasa_markah">
         Bahasa_markah</a> standar untuk dokumen yang dirancang untuk ditampilkan di peramban internet.
         Ini dapat dibantu oleh teknologi seperti Cascading Style Sheets (CSS) 
